# panda-client

./: .gitignore  .pre-commit-config.yaml  ChangeLog.txt  MANIFEST.in  README.md  README.txt  pyproject.toml  setup.cfg  setup.py
current/: MANIFEST.in
examples/: multistep_merge_step_chain_example.py  multistep_merge_wfd.yaml  signal_background_combine_wfd.yaml  workflow_description_example.py
glade/: pbook.glade
notebooks/: installation.ipynb  magic.ipynb  preparation.ipynb  run.ipynb  setup.ipynb
pandaclient/: AthenaUtils.py  BookConfig.py  BookGUI.py  Client.py  CommonArgs.py  FileSpec.py  Group_argparse.py  JobSpec.py  LocalJobSpec.py  LocalJobsetSpec.py  MiscUtils.py  PBookCore.py  PBookScript.py  PBookTyper.py  PChainScript_native.py  PLogger.py  PandaToolsPkgInfo.py  ParseJobXML.py  PathenaScript.py  PchainScript.py  PcontainerScript.py  PdbUtils.py  PflowScript.py  PhpoScript.py  PrunScript.py  PsubUtils.py  example_task.py  idds_api.py  localSpecs.py  openidc_utils.py  panda_api.py  panda_gui.py  panda_jupyter.py  pcontainer_core.py  pflow_checker.py  queryPandaMonUtils.py  test_client.py  test_client_file.py  test_client_job.py  test_client_misc.py  (+8 more)
pandatools/: AppConfig.py  AthenaUtils.py  BookConfig.py  BookGUI.py  Client.py  FetcherFactory.py  FileSpec.py  GlobalConfig.py  Group_argparse.py  ImapFetcher.py  JobSpec.py  LFCclient.py  LocalJobSpec.py  LocalJobsetSpec.py  MiscUtils.py  MyproxyUtils.py  PBookCore.py  PBookScript.py  PBookkCore.py  PLogger.py  PMailParser.py  PSeqUtils.py  PSequence.py  PStep.py  PandaToolsPkgInfo.py  ParseJobXML.py  PathenaScript.py  PcontainerScript.py  PdbUtils.py  PflowScript.py  PhpoScript.py  PopFetcher.py  PrunScript.py  PsubUtils.py  RssFeedReader.py  SeqConfig.py  countGuidsClient.py  datriHandler.py  eventLookup.py  eventLookupClient.py  (+9 more)
scripts/: pathena  pbook  pchain  pchain_native  pcontainer  pflow  phpo  prun  psequencer  puserinfo
(+42 files in other folders)
