[build-system]
requires = ["hatchling", "setuptools"]
build-backend = "hatchling.build"


[project]
name = "panda-client"
dynamic = ["version"]
description = "PanDA Client Package"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.6"
authors = [
    { name = "PanDA Team", email = "panda-support@cern.ch" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]


dependencies = [
    "rich",
    "certifi",
    "httpx",
]

[project.optional-dependencies]
jupyter = [
    "jupyter-dash",
    "pandas",
]


[project.urls]
Homepage = "https://panda-wms.readthedocs.io/en/latest/"


[tool.hatch.version]
path = "pandaclient/PandaToolsPkgInfo.py"
pattern = "release_version = \"(?P<version>[^\"]+)\""


[tool.hatch.build]
directory = "dist"


[tool.hatch.build.targets.wheel]
exclude = ["*.template"]
# pandatools is a compat symlink to pandaclient created at build time by
# packages/hatch_build.py; it must stay in this list to be packaged into the wheel
packages = ["pandaclient", "pandatools"]


[tool.hatch.build.targets.wheel.shared-data]
"templates" = "etc/panda"
"scripts" = "bin"
"share" = "etc/panda/share"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "packages/hatch_build.py"


[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    ".idea"
]


[tool.black]
line-length=160

[tool.autopep8]
# https://pypi.org/project/autopep8/#pyproject-toml
max_line_length = 160
ignore = ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3

[tool.isort]
profile = "black"
